changed colors from green to blue

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                   A
                   <span
                     class="typing"
-                    style="font-weight: 300; color: #004d40"
+                    style="font-weight: 300; color: #85b9e0"
                   ></span>
                 </h5>
                 <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
@@ -513,9 +513,7 @@
                     >
                   </p>
                 </div>
-              </div>
-              <div class="role brown-text text-darken-2">
-                Full Stack Developer
+                <div class="role blue-text">Full Stack Developer</div>
               </div>
               <ul>
                 <li>
@@ -564,10 +562,9 @@
                     >
                   </p>
                 </div>
+                <div class="role blue-text">Full Stack Developer</div>
               </div>
-              <div class="role brown-text text-darken-2">
-                Full Stack Developer
-              </div>
+
               <ul>
                 <li>
                   Maintained an internal Data Fabrication portal using ReactJS
@@ -616,10 +613,9 @@
                     >
                   </p>
                 </div>
+                <div class="role blue-text">Full Stack Developer</div>
               </div>
-              <div class="role brown-text text-darken-2">
-                Full Stack Developer
-              </div>
+
               <ul>
                 <li>
                   Developed a UI to interact with Oracle database using Flask,
@@ -643,7 +639,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <span>May 2022 - August 2022 | Missisauga, Canada</span>
+              <span> May 2022 - August 2022 | Missisauga, Canada</span>
             </div>
           </div>
 
@@ -671,10 +667,9 @@
                     >
                   </p>
                 </div>
+                <div class="role blue-text">Full Stack Developer</div>
               </div>
-              <div class="role brown-text text-darken-2">
-                Full Stack Developer
-              </div>
+
               <ul>
                 <li>Optimized a C++ bond parser by 200%</li>
                 <li>Sorted and itemized bonds using Python</li>
@@ -689,7 +684,7 @@
               </ul>
             </div>
             <div class="card-action">
-              <span>May 2021 - August 2021 | Toronto, Canada</span>
+              <span> May 2021 - August 2021 | Toronto, Canada</span>
             </div>
           </div>
         </div>
@@ -837,7 +832,7 @@
           <!-- Languages and Databases -->
           <div class="card">
             <div class="card-content">
-              <h4 class="brown-text light">Languages and Databases</h4>
+              <h4 class="blue-text light">Languages and Databases</h4>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -896,7 +891,7 @@
 
           <div class="card">
             <div class="card-content">
-              <h4 class="brown-text light">Libraries</h4>
+              <h4 class="blue-text light">Libraries</h4>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -933,7 +928,7 @@
           <!-- Frameworks -->
           <div class="card">
             <div class="card-content">
-              <h4 class="brown-text light">Frameworks</h4>
+              <h4 class="blue-text light">Frameworks</h4>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -977,7 +972,7 @@
           <!-- Other -->
           <div class="card">
             <div class="card-content">
-              <h4 class="brown-text light">Other</h4>
+              <h4 class="blue-text light">Other</h4>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -1059,7 +1054,7 @@
                       ></span
                     >
                   </p>
-                  <p class="brown-text">Toronto, Canada</p>
+                  <p class="blue-text">Toronto, Canada</p>
                   <p>
                     <b>Degree: </b>Bachelors of Science in Computer Engineering
                     <br />
