--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
             ><i class="mdi-file-folder-open small"></i><span>Resume</span></a
           >
         </li>
+        <li class="bold">
+          <a
+            aria-label="Navigate to the places travelled section"
+            href="#places-travelled"
+            class="waves-effect waves-dark teal-text"
+            ><i class="mdi-action-trending-up small"></i
+            ><span>Places Travelled</span></a
+          >
+        </li>
       </ul>
     </nav>
 
@@ -362,6 +371,15 @@
             target="_blank"
             class="waves-effect waves-dark teal-text"
             ><i class="mdi-file-folder-open small"></i><span>Resume</span></a
+          >
+        </li>
+        <li class="bold">
+          <a
+            aria-label="Navigate to the places travelled section"
+            href="#places-travelled"
+            class="waves-effect waves-dark teal-text"
+            ><i class="mdi-action-trending-up small"></i
+            ><span>Places Travelled</span></a
           >
         </li>
       </ul>
@@ -1079,7 +1097,19 @@
         </div>
       </section>
 
-      <!-- Eight Section: Contact -->
+      <!-- Eigth Section: Places Travelled -->
+      <section id="places-travelled" class="section scrollspy full-height">
+        <h3 class="page-title white-text teal">Places Travelled</h3>
+        <div class="container">
+          <iframe
+            src="https://www.google.com/maps/d/u/0/embed?mid=1wWyM1ttDyTtKSMzSGBbZDH5UCjQHQkc&ehbc=2E312F&noprof=1"
+            width="100%"
+            height="70%"
+          ></iframe>
+        </div>
+      </section>
+
+      <!-- Ninth Section: Contact -->
       <section id="contact" class="section scrollspy full-height">
         <h3 class="page-title white-text teal">Contact</h3>
         <div class="container">
