added photo of places visited to readme and changed nav logo to map

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <!-- Font Awesome Icon - CSS-->
     <link
       rel="stylesheet"
@@ -283,7 +287,7 @@
             aria-label="Navigate to the places travelled section"
             href="#places-travelled"
             class="waves-effect waves-dark teal-text"
-            ><i class="mdi-action-trending-up small"></i
+            ><i class="material-icons small">map</i
             ><span>Places Travelled</span></a
           >
         </li>
@@ -378,8 +382,7 @@
             aria-label="Navigate to the places travelled section"
             href="#places-travelled"
             class="waves-effect waves-dark teal-text"
-            ><i class="mdi-action-trending-up small"></i
-            ><span>Places Travelled</span></a
+            ><i class="mdi-map small"></i><span>Places Travelled</span></a
           >
         </li>
       </ul>
